--- a/po/fr.po
+++ b/po/fr.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: Geany 1.25\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-20 11:22+0200\n"
-"PO-Revision-Date: 2015-06-22 23:59+0200\n"
+"PO-Revision-Date: 2015-07-04 18:43+0200\n"
 "Last-Translator: Colomban Wendling <ban@herbesfolles.org>\n"
 "Language-Team: French <geany-i18n@uvena.de>\n"
 "Language: fr\n"
@@ -5394,7 +5394,7 @@ msgstr "_Relancer le terminal"
 
 #: ../src/vte.c:654
 msgid "_Input Methods"
-msgstr "_Méthodes d'entrée"
+msgstr "_Méthodes de saisie"
 
 #: ../src/vte.c:747
 msgid ""
