--- a/po/mn.po
+++ b/po/mn.po
@@ -28,7 +28,7 @@ msgstr ""
 
 #: ../geany.desktop.in.h:3
 #, fuzzy
-msgid "A fast and lightweight IDE using GTK2"
+msgid "A fast and lightweight IDE using GTK+"
 msgstr "Хурдан авсаархан IDE"
 
 #: ../data/geany.glade.h:1
