--- a/po/nn.po
+++ b/po/nn.po
@@ -26,8 +26,8 @@ msgid "Integrated Development Environment"
 msgstr "Integrert utviklingsmiljø"
 
 #: ../geany.desktop.in.h:3
-msgid "A fast and lightweight IDE using GTK2"
-msgstr "Eit raskt og lett IDE som nyttar GTK2"
+msgid "A fast and lightweight IDE using GTK+"
+msgstr "Eit raskt og lett IDE som nyttar GTK+"
 
 #: ../data/geany.glade.h:1
 msgid "_Toolbar Preferences"
