--- a/po/ru.po
+++ b/po/ru.po
@@ -31,8 +31,8 @@ msgid "Integrated Development Environment"
 msgstr "Интегрированная среда разработки"
 
 #: ../geany.desktop.in.h:3
-msgid "A fast and lightweight IDE using GTK2"
-msgstr "Быстрая и легковесная среда разработки, использующая GTK2"
+msgid "A fast and lightweight IDE using GTK+"
+msgstr "Быстрая и легковесная среда разработки, использующая GTK+"
 
 #: ../data/geany.glade.h:1
 msgid "_Toolbar Preferences"
