--- a/README
+++ b/README
@@ -8,8 +8,8 @@ Geany is a small and lightweight integrated development environment.
 It was developed to provide a small and fast IDE, which has only a
 few dependencies from other packages. Another goal was to be as independent
 as possible from a special Desktop Environment like KDE or GNOME. So it
-is using only the GTK2 toolkit and therefore you need only the
-GTK2 runtime libraries to run Geany.
+is using only the GTK+ toolkit and therefore you need only the
+GTK+ runtime libraries to run Geany.
 
 
 Features
