--- a/po/ar.po
+++ b/po/ar.po
@@ -31,8 +31,8 @@ msgid "Integrated Development Environment"
 msgstr "بيئة التطوير المتكاملة"
 
 #: ../geany.desktop.in.h:3
-msgid "A fast and lightweight IDE using GTK2"
-msgstr "بيئة تطوير خفيفة وسريع تستخدم مكتبات GTK2"
+msgid "A fast and lightweight IDE using GTK+"
+msgstr "بيئة تطوير خفيفة وسريع تستخدم مكتبات GTK+"
 
 #: ../data/geany.glade.h:1
 msgid "_Toolbar Preferences"
