--- a/po/ca.po
+++ b/po/ca.po
@@ -28,8 +28,8 @@ msgid "Integrated Development Environment"
 msgstr "Entorn Integrat de Desenvolupament"
 
 #: ../geany.desktop.in.h:3
-msgid "A fast and lightweight IDE using GTK2"
-msgstr "Un IDE ràpid i lleuger fet amb GTK2"
+msgid "A fast and lightweight IDE using GTK+"
+msgstr "Un IDE ràpid i lleuger fet amb GTK+"
 
 #: ../data/geany.glade.h:1
 msgid "_Toolbar Preferences"
