--- a/po/el.po
+++ b/po/el.po
@@ -28,8 +28,8 @@ msgid "Integrated Development Environment"
 msgstr "Ενιαίο Περιβάλλον Ανάπτυξης"
 
 #: ../geany.desktop.in.h:3
-msgid "A fast and lightweight IDE using GTK2"
-msgstr "Γρήγορο και ελαφρύ GTK2 IDE"
+msgid "A fast and lightweight IDE using GTK+"
+msgstr "Γρήγορο και ελαφρύ GTK+ IDE"
 
 #: ../data/geany.glade.h:1
 msgid "_Toolbar Preferences"
