--- a/po/eu.po
+++ b/po/eu.po
@@ -26,8 +26,8 @@ msgid "Integrated Development Environment"
 msgstr "Garapen ingurune integratua"
 
 #: ../geany.desktop.in.h:3
-msgid "A fast and lightweight IDE using GTK2"
-msgstr "GTK2 erabiltzen duen IDE azkar eta arina"
+msgid "A fast and lightweight IDE using GTK+"
+msgstr "GTK+ erabiltzen duen IDE azkar eta arina"
 
 #: ../data/geany.glade.h:1
 msgid "_Toolbar Preferences"
