--- a/po/hi.po
+++ b/po/hi.po
@@ -26,8 +26,8 @@ msgid "Integrated Development Environment"
 msgstr "एकीकृत विकास वातावरण"
 
 #: ../geany.desktop.in.h:3
-msgid "A fast and lightweight IDE using GTK2"
-msgstr "एक तेज और हलका GTK2 का उपयोग कर आईडीई"
+msgid "A fast and lightweight IDE using GTK+"
+msgstr "एक तेज और हलका GTK+ का उपयोग कर आईडीई"
 
 #: ../data/geany.glade.h:1
 msgid "_Toolbar Preferences"
