--- a/po/it.po
+++ b/po/it.po
@@ -31,8 +31,8 @@ msgid "Integrated Development Environment"
 msgstr "Ambiente di sviluppo integrato"
 
 #: ../geany.desktop.in.h:3
-msgid "A fast and lightweight IDE using GTK2"
-msgstr "Un IDE veloce e leggero che usa GTK2"
+msgid "A fast and lightweight IDE using GTK+"
+msgstr "Un IDE veloce e leggero che usa GTK+"
 
 #: ../data/geany.glade.h:1
 msgid "_Toolbar Preferences"
