--- a/po/tr.po
+++ b/po/tr.po
@@ -25,8 +25,8 @@ msgid "Integrated Development Environment"
 msgstr "Tümleşik Geliştirme Ortamı"
 
 #: ../geany.desktop.in.h:3
-msgid "A fast and lightweight IDE using GTK2"
-msgstr "GTK2 kullanan hızlı ve hafif bir IDE"
+msgid "A fast and lightweight IDE using GTK+"
+msgstr "GTK+ kullanan hızlı ve hafif bir IDE"
 
 #: ../data/geany.glade.h:1
 msgid "_Toolbar Preferences"
