--- a/NEWS
+++ b/NEWS
@@ -144,6 +144,8 @@ Geany 1.25 (unreleased)
     * Add scintilla_get_type().
 
     Windows
+    * Use native Windows quoting rules for commands (on Windows, part of 
+      subprocess spawning improvements).
     * Prompt before overwriting existing files when using native Save As
       dialog (PR#113, Adam Coyne).
     * View -> Change Font now respects the native dialog setting.
