Fix spawn documentation so it appears in the API docs

--- a/doc/plugins.dox
+++ b/doc/plugins.dox
@@ -55,6 +55,7 @@ We will try to document as many functions and structs as possible.
 - @link msgwindow.h @endlink
 - @link project.h @endlink
 - @link sciwrappers.h Scintilla Wrapper Functions @endlink
+- @link spawn.h Spawning programs @endlink
 - @link stash.h Stash Pref/Setting Functions @endlink
 - @link utils.h General Utility Functions @endlink
 - @link ui_utils.h Widget Utility Functions @endlink
