Set release date

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Geany 1.25 (unreleased)
+Geany 1.25 (July 12, 2015)
 
     General
     * GTK3 support, while not enabled by default, is now considered stable.
